namespace PracticeOOP_RPG.Domain;

public abstract class Character : ICharacter, IEquatable<Character>
{
    private readonly string _name;
    private int _health;
    private int _maxHealth;
    private readonly int _baseAttackPower;
    private readonly int _baseDefense;

    protected Character(string name, int health, int attackPower, int defense)
    {
        _name = string.IsNullOrWhiteSpace(name) ? throw new ArgumentException("Name is required.", nameof(name)) : name;
        _maxHealth = Math.Max(1, health);
        _health = _maxHealth;
        _baseAttackPower = Math.Max(0, attackPower);
        _baseDefense = Math.Max(0, defense);
    }

    public string Name => _name;
    public int Health
    {
        get => _health;
        protected set => _health = Math.Max(0, Math.Min(MaxHealth, value));
    }

    public int MaxHealth
    {
        get => _maxHealth;
        protected set => _maxHealth = Math.Max(1, value);
    }

    public int BaseAttackPower => _baseAttackPower;
    public int BaseDefense => _baseDefense;
    public bool IsAlive => Health > 0;
    public Weapon? EquippedWeapon { get; private set; }

    public void EquipWeapon(Weapon weapon)
    {
        EquippedWeapon = weapon ?? throw new ArgumentNullException(nameof(weapon));
    }

    public int GetAttackPower() => BaseAttackPower + (EquippedWeapon?.Power ?? 0);

    public int CalculateDamage(int attackPower)
    {
        return Math.Max(1, attackPower - BaseDefense);
    }

    public AttackResult Attack(ICharacter defender, IAttackStrategy strategy)
    {
        if (defender == null) throw new ArgumentNullException(nameof(defender));
        if (strategy == null) throw new ArgumentNullException(nameof(strategy));
        if (!IsAlive) return new AttackResult(0, $"{Name} cannot attack because they are defeated.");
        if (defender is not Character defenderCharacter)
        {
            throw new ArgumentException("Defender must be a Character.", nameof(defender));
        }

        return strategy.Execute(this, defender);
    }

    public AttackResult Attack(Character defender, IAttackStrategy strategy)
    {
        if (defender == null) throw new ArgumentNullException(nameof(defender));
        if (strategy == null) throw new ArgumentNullException(nameof(strategy));
        if (!IsAlive) return new AttackResult(0, $"{Name} cannot attack because they are defeated.");

        return strategy.Execute(this, defender);
    }

    public void ReceiveDamage(int amount)
    {
        if (amount <= 0) return;
        Health -= amount;
    }

    public void Heal(int amount)
    {
        if (amount <= 0) return;
        Health += amount;
    }

    public void RestoreToFull()
    {
        Health = MaxHealth;
    }

    public abstract string Describe();

    public override string ToString() => $"{Name} [HP={Health}, ATK={GetAttackPower()}, DEF={BaseDefense}]";

    public static bool operator ==(Character? left, Character? right)
    {
        if (ReferenceEquals(left, right)) return true;
        if (left is null || right is null) return false;
        return left.Equals(right);
    }

    public static bool operator !=(Character? left, Character? right) => !(left == right);

    public override bool Equals(object? obj) => Equals(obj as Character);

    public bool Equals(Character? other)
    {
        return other != null && GetType() == other.GetType() && Name == other.Name;
    }

    public override int GetHashCode() => HashCode.Combine(Name, GetType());
}

